--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^8.0.5",
     "@prisma/client": "^5.22.0",
     "bull": "^4.16.4",
+    "bullmq": "^5.26.2",
     "class-validator": "^0.14.1",
     "csv-parse": "^5.5.6",
     "csv-parser": "^3.0.0",
